Added Reaction Collector

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deutschland-inzidenz",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Discord Bot",
   "main": "index.js",
   "scripts": {
@@ -13,14 +13,12 @@
   "author": "Heizungauf6",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.1",
     "discord.io": "^2.5.3",
     "discord.js": "^12.5.1",
     "discord.js-commando": "^0.12.2",
     "dotenv": "^8.2.0",
     "landkreise-deutschland": "^3.0.0",
     "node-fetch": "^2.6.1",
-    "node-rest-client": "^3.1.0",
-    "winston": "^3.3.3"
+    "node-rest-client": "^3.1.0"
   }
 }
